--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: none # 자동으로 테이블을 만들어줌 애플리케이션 실행시에 다 지우고 다시 실행
+      ddl-auto: create # 자동으로 테이블을 만들어줌 애플리케이션 실행시에 다 지우고 다시 실행
     properties:
       hibernate:
         show_sql: true
